# bootcamp

./: .dockerignore  docker-compose.local.yml  pyproject.toml
app/: main.py
app/tests/: test_app.py
compose/app/: Dockerfile  entrypoint.sh
compose/nginx/: Dockerfile  nginx-custom.conf
